--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,10 +4,10 @@ clockinclockout.link = http://clockinclockout.com.br
 #### E-MAIL SETTINGS ####
 clockinclockout.mail.host = smtp.gmail.com
 clockinclockout.mail.port = 587
-clockinclockout.mail.username = brunopib@gmail.com	
-clockinclockout.mail.password = jbadm671126999273127
+clockinclockout.mail.username = user@gmail.com	
+clockinclockout.mail.password = password
 clockinclockout.mail.protocol = smtp
 clockinclockout.mail.auth = true
 clockinclockout.mail.starttls.enable = true
 clockinclockout.mail.debug = false
-clockinclockout.mail.from = brunopib@gmail.com
+clockinclockout.mail.from = user@gmail.com
