--- a/etc/application.properties
+++ b/etc/application.properties
@@ -11,3 +11,10 @@ clockinclockout.mail.auth = true
 clockinclockout.mail.starttls.enable = true
 clockinclockout.mail.debug = false
 clockinclockout.mail.from = mailfrom
+
+#### QUARTZ JOBS DEFINITIONS ####
+clockinclockout.quartz.jobStore.misfireThreshold = 1800000
+clockinclockout.quartz.threadPool.threadCount = 2
+clockinclockout.quartz.threadPool.threadPriority = 5
+clockinclockout.quartz.resetPasswordNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
+clockinclockout.quartz.emailNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
