5 improving properties values, it was done on the #5 issue but not big deal/impact.

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -1,5 +1,5 @@
 #### GENERAL SETTINGS ####
-clockinclockout.link = http://clockinclockout.com.br
+clockinclockout.link = http://clkio.com
 
 #### E-MAIL SETTINGS ####
 clockinclockout.mail.host = smtp.com
