#12 updating artifacts in order to properly publish the resulting .war file on the glassfish webcontainer.

--- a/etc/application.properties
+++ b/etc/application.properties
@@ -13,8 +13,8 @@ clockinclockout.mail.debug = false
 clockinclockout.mail.from = mailfrom
 
 #### QUARTZ JOBS DEFINITIONS ####
-clockinclockout.quartz.jobStore.misfireThreshold = 1800000
-clockinclockout.quartz.threadPool.threadCount = 2
-clockinclockout.quartz.threadPool.threadPriority = 5
-clockinclockout.quartz.resetPasswordNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
-clockinclockout.quartz.emailNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
+clkio.quartz.jobStore.misfireThreshold = 1800000
+clkio.quartz.threadPool.threadCount = 2
+clkio.quartz.threadPool.threadPriority = 5
+clkio.quartz.resetPasswordNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
+clkio.quartz.emailNotConfirmedJob.cronExepression = 0 0 0 ? * SUN-SAT *
