--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,22 @@
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
    
+   <listener>
+        <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
+    </listener>
+    
+    <!-- ws endpoints -->
+    <servlet>
+        <description>JAX-WS endpoint - userws</description>
+        <servlet-name>userws</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>userws</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+   
 	<session-config>
 		<session-timeout>1</session-timeout>
 		<cookie-config>
