--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,9 +37,9 @@
         <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
     </listener>
     
-    <!-- ws endpoints -->
+    <!-- JAX-WS Endpoints -->
     <servlet>
-        <description>JAX-WS endpoint - userws</description>
+        <description>User WS</description>
         <servlet-name>userws</servlet-name>
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
@@ -47,6 +47,16 @@
     <servlet-mapping>
         <servlet-name>userws</servlet-name>
         <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description>Login WS</description>
+        <servlet-name>loginws</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>loginws</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
    
 	<session-config>
