fixes #36, ManualEnteringReason List service implemented as requested

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,6 +88,16 @@
         <servlet-name>adjustingws</servlet-name>
         <url-pattern>/adjusting</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <description>Manual Entering Reason WS</description>
+        <servlet-name>manualenteringreasonws</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>manualenteringreasonws</servlet-name>
+        <url-pattern>/manualenteringreason</url-pattern>
+    </servlet-mapping>
    
 	<session-config>
 		<session-timeout>1</session-timeout>
