--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		
 		<!-- log4j -->
@@ -86,6 +86,12 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.activation</groupId>
+					<artifactId>activation</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -124,11 +130,11 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
 	<build>
-		<finalName>clkio</finalName>
+		<finalName>clkio-jaxws</finalName>
 	</build>
 </project>
